--- a/hotel-service/src/main/resources/application.yaml
+++ b/hotel-service/src/main/resources/application.yaml
@@ -2,7 +2,7 @@ server:
   port: 8082
 spring:
   application:
-    name: hotel
+    name: hotel-service
   datasource:
     password: password
     url: jdbc:postgresql://localhost:5432/hotelservice
@@ -15,4 +15,11 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
-
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
