--- a/rating-service/src/main/resources/application.yml
+++ b/rating-service/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8091
+  port: 8083
 spring:
   application:
-    name: rating
+    name: rating-service
   data:
     mongodb:
       authentication-database: admin
@@ -11,6 +11,14 @@ spring:
       port: 27017
       host: localhost
       database: ratingservice
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    register-with-eureka: true
+    fetch-registry: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
 
 
 
