--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8081
+  port: 8084
 spring:
   application:
-    name: customer
+    name: user-service
   datasource:
     password: password
     url: jdbc:postgresql://localhost:5432/userservice
@@ -15,3 +15,11 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
+eureka:
+  instance:
+    prefer-ip-address: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
