--- a/hotel-service/src/main/resources/application.yaml
+++ b/hotel-service/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 server:
   port: 8082
 spring:
+  config:
+    import: configserver:http://localhost:8086
   application:
     name: hotel-service
   datasource:
@@ -15,11 +17,12 @@ spring:
         dialect: org.hibernate.dialect.PostgreSQLDialect
         format_sql: true
     show-sql: true
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    fetch-registry: true
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+    # picked up from config server
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#  client:
+#    fetch-registry: true
+#    register-with-eureka: true
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
