--- a/rating-service/src/main/resources/application.yml
+++ b/rating-service/src/main/resources/application.yml
@@ -3,6 +3,8 @@ server:
 spring:
   application:
     name: rating-service
+  config:
+    import: configserver:http://localhost:8086
   data:
     mongodb:
       authentication-database: admin
@@ -11,14 +13,15 @@ spring:
       port: 27017
       host: localhost
       database: ratingservice
-eureka:
-  instance:
-    prefer-ip-address: true
-  client:
-    register-with-eureka: true
-    fetch-registry: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
+      # picked up from config server
+#eureka:
+#  instance:
+#    prefer-ip-address: true
+#  client:
+#    register-with-eureka: true
+#    fetch-registry: true
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
 
 
 
